Make menu fixed on mobile and improve the opened state of nav

--- a/style.css
+++ b/style.css
@@ -19,6 +19,10 @@ html {
 }
 
 body {
+  --header-height: 338px;
+  --header-margin-top:50px;
+  --nav-padding-bottom: 70px;
+
   margin: 0;
   min-height: 100dvh;
   display: flex;
@@ -72,7 +76,7 @@ a img {
 
 #nav {
   min-width: 400px;
-  padding-bottom: 70px;
+  padding-bottom: var(--nav-padding-bottom);
 }
   #nav img {
     max-width: 200px;
@@ -99,8 +103,7 @@ header {
   .logo:hover { background-position-x: 326px; }
 
 
-#menu-toggle,
-label[for="menu-toggle"]  {
+.menu-toggle-btn, #menu-toggle  {
   display: none;
 }
 
@@ -267,29 +270,61 @@ and (max-width : 820px) {
     flex-direction: column;
   }
 
+  body:has(#menu-toggle:checked) {
+    overflow: hidden;
+    /* Give an offset to the top to preserve the size of the page, so the scroll position was correct once the menu is closed. */
+    padding-top: calc(var(--header-height) + var(--header-margin-top) + var(--nav-padding-bottom));
+  }
+
+  body:has(#menu-toggle:checked) #nav {
+    top: 0;
+    left: 0;
+    height: 100dvh;
+    overflow: auto;
+    position: fixed;
+
+    /* backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    background: rgba(0, 0, 0, 0.8); */
+    background: black;
+  }
+
+  body:has(#menu-toggle:checked) .menu-toggle-btn {
+    position: sticky;
+  }
+
+  body:has(#menu-toggle:checked) header {
+    display: none;
+  }
+
+  body:has(#menu-toggle:checked) .menu-index {
+    display: block;
+  }
+
   #nav {
-    background: #000000e0;
-    z-index: 2;
+    min-width: initial;
+    height: initial;
+    overflow: initial; /* Having this set to "initial", makes it so the scroll position will be restored when the mobile navigation is opened again, otherwise it is reset each time the .main-nav is closed. (For some reason) */
+    width: 100%;
+    z-index: 10;
+  }
+
+  .menu-toggle-btn {
+    display: block;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    z-index: 10;
+    padding: 0.8em;
+
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
-    background: #000000dd;
-    min-width: initial;
+    background: rgba(0, 0, 0, 0.8);
+    box-shadow: 0 30px 40px rgba(0,0,0,.1);
   }
 
-  #nav header {
-    overflow: hidden;
-    height: 338px;
-    width: unset; 
-    padding-bottom: 0;
-  }
-  .logo {
-    margin: 0;
-    margin-left: calc(50vw - 160px);
-    padding-bottom: 0;
-    position: relative;
-    top: 43px;
-  }
-
+  
   label[for="menu-toggle"] {
     display: flex;
     align-items: end;
@@ -298,14 +333,10 @@ and (max-width : 820px) {
     padding: 0.3em 1.5em 0.5em 1.2em;
     line-height: 1;
     font-weight: 700;
-    border: 1px solid;
+    border: 1px solid; /* !!!!!!!!!!!!!!! */
     width: fit-content;
     user-select: none;
-    margin: 0 auto;
     cursor: pointer;
-    position: relative;
-    top: 25px;
-    z-index: 21;
     color: #c1784a;
     background: #000000e0;
     font-size: 18px;
@@ -316,18 +347,32 @@ and (max-width : 820px) {
     color: inherit;
   }
 
-  label[for="menu-toggle"] > .menu-icon {
+  label[for="menu-toggle"] .menu-icon {
     font-size: 150%;
     position: relative;
     top: 3px;
   }
 
-  #menu-toggle:not(:checked) ~ *:not(label[for="menu-toggle"]) {
+  .menu-index {
     display: none;
   }
 
-  #menu-toggle:checked ~ label[for="menu-toggle"] {
-    margin-bottom: 81px;
+  header {
+    overflow: hidden;
+    height: var(--header-height);
+    width: unset; 
+    padding-bottom: 0;
+    margin-top: var(--header-margin-top);
+  }
+  .logo {
+    margin: 0;
+    margin-left: calc(50vw - 160px);
+    padding-bottom: 0;
+    position: relative;
+
+
+    /* WTF?! */
+    top: var(--header-margin-top);
   }
 
   article {
